@@ -1,3 +1,8 @@
+04/07/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added a null menu item to the recent files menu for when there are
+      no recent files in the list.
+
 03/16/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added a URI to the XMLDocument class to allow the XMLDocument to know
